--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
-    "next": "^13.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.4",
+    "source-map-loader": "^4.0.1"
   }
 }
